tests/tooling/fixtures/native/recovery/negative/negative_pure_extern_function_with_body.objc3
// Negative fixture: pure-extern declarations are declaration-only and must end with `;`.
// Expected diagnostic code(s): O3P104.
module NegativePureExternFunctionWithBody;

pure extern fn add(lhs: i32, rhs: i32) -> i32 {
  return lhs + rhs;
}

fn main() -> i32 {
  return add(1, 2);
}
